// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RadioGroup > renders correctly as a horizontal-card with an error message 1`] = `
.c3 {
  display: flex;
}

.c11 {
  display: flex;
}

.c12 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  width: 16px;
  height: 16px;
  transform: rotate(0deg);
}

.c12 svg {
  color: #d03c30!important;
}

.c13 {
  font-family: CircularXX;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25;
  text-align: left;
  color: #d03c30;
}

.c0 {
  display: flex;
  flex-direction: column;
  position: relative;
  width: 100%;
  border: 0;
}

.c5 {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c7 {
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  border-radius: 24px;
  background-color: #ffffff;
  border: 2px solid #d03c30;
  border: 8px solid #d03c30;
  outline: 0;
}

.c4:focus-visible+.c7 {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c10 {
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  border-radius: 24px;
  background-color: #ffffff;
  border: 2px solid #d03c30;
  outline: 0;
}

.c4:focus-visible+.c10 {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c2 {
  display: flex;
  flex-direction: column;
  cursor: pointer;
  opacity: 1;
  border-radius: 12px;
  background-color: #f1e9dc;
  padding: 10px;
  border: 2px solid #d03c30;
  justify-content: center;
  width: 100%;
}

.c2:hover {
  background-color: #dad2c4;
}

.c9 {
  display: flex;
  flex-direction: column;
  cursor: pointer;
  opacity: 1;
  border-radius: 12px;
  background-color: #f1e9dc;
  padding: 12px;
  justify-content: center;
  width: 100%;
}

.c9:hover {
  background-color: #dad2c4;
}

.c8 {
  line-height: 16px;
  font-size: 16px;
  font-weight: 500;
  color: #d03c30;
  margin-top: 4px;
}

.c1 {
  display: flex;
  gap: 12px;
  justify-content: flex-start;
  flex-direction: row;
  flex-wrap: wrap;
}

@media (min-width: 0px) {
  .c3 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c6 {
    margin-right: 8px;
  }
}

@media (min-width: 0px) {
  .c11 {
    margin-top: 8px;
  }
}

@media (min-width: 0px) {
  .c11 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c11 {
    gap: 4px;
  }
}

@media (min-width: 420px) {
  .c2 {
    width: calc(50% - 6px);
  }
}

@media (min-width: 768px) {
  .c2 {
    width: 201px;
  }
}

@media (min-width: 420px) {
  .c9 {
    width: calc(50% - 6px);
  }
}

@media (min-width: 768px) {
  .c9 {
    width: 201px;
  }
}

<div>
  <fieldset
    class="c0"
  >
    <div
      class=""
    >
      <div
        class="c1"
      >
        <label
          class="c2"
          data-testid="option1"
          for="MM_SMORES_9"
        >
          <div
            class="c3"
          >
            <input
              checked=""
              class="c4 c5"
              id="MM_SMORES_9"
              name="MM_SMORES_8"
              type="radio"
              value="option1"
            />
            <div
              class="c6 c7"
            />
            <div
              class=""
            >
              <span
                class="c8"
              >
                Option 1
              </span>
            </div>
          </div>
        </label>
        <label
          class="c9"
          data-testid="option2"
          for="MM_SMORES_10"
        >
          <div
            class="c3"
          >
            <input
              class="c4 c5"
              id="MM_SMORES_10"
              name="MM_SMORES_8"
              type="radio"
              value="option2"
            />
            <div
              class="c6 c10"
            />
            <div
              class=""
            >
              <span
                class="c8"
              >
                Option 2
              </span>
            </div>
          </div>
        </label>
        <label
          class="c9"
          data-testid="option3"
          for="MM_SMORES_11"
        >
          <div
            class="c3"
          >
            <input
              class="c4 c5"
              id="MM_SMORES_11"
              name="MM_SMORES_8"
              type="radio"
              value="option3"
            />
            <div
              class="c6 c10"
            />
            <div
              class=""
            >
              <span
                class="c8"
              >
                Option 3
              </span>
            </div>
          </div>
        </label>
      </div>
    </div>
    <div
      class="c11"
    >
      <span
        class="c12"
        data-testid="warning-container"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 25 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.001 6a1 1 0 00-1 1v6a1 1 0 102 0V7a1 1 0 00-1-1zm0 10.005a1.003 1.003 0 000 2.005 1 1 0 001-1V17a.995.995 0 00-1-.995zm11.42-.503l-7.64-13.316A4.31 4.31 0 0012.001 0a4.31 4.31 0 00-3.78 2.186L.581 15.502a4.288 4.288 0 00.01 4.327A4.313 4.313 0 004.36 22h15.28a4.313 4.313 0 003.771-2.171 4.288 4.288 0 00.01-4.327zm-1.739 3.324A2.333 2.333 0 0119.642 20H4.361a2.331 2.331 0 01-2.042-1.174 2.306 2.306 0 01-.005-2.328l7.64-13.316A2.332 2.332 0 0112.001 2c.856 0 1.621.441 2.046 1.182l7.64 13.316c.418.73.417 1.6-.005 2.328z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="c13"
        cursor="inherit"
        title=""
      >
        This is an error message.
      </span>
    </div>
  </fieldset>
</div>
`;

exports[`RadioGroup > renders correctly as a vertical-card with body copy 1`] = `
.c3 {
  display: flex;
}

.c9 {
  font-family: CircularXX;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25;
  text-align: left;
  color: #292924;
}

.c0 {
  display: flex;
  flex-direction: column;
  position: relative;
  width: 100%;
  border: 0;
}

.c5 {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c7 {
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  border-radius: 24px;
  background-color: #ffffff;
  border: 2px solid #292924;
  border: 8px solid #292924;
  outline: 0;
}

.c4:focus-visible+.c7 {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c11 {
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  border-radius: 24px;
  background-color: #ffffff;
  border: 2px solid #292924;
  outline: 0;
}

.c11:hover {
  border: 2px solid #292924;
}

.c4:focus-visible+.c11 {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c2 {
  display: flex;
  flex-direction: column;
  cursor: pointer;
  opacity: 1;
  border-radius: 12px;
  background-color: #f1e9dc;
  padding: 10px;
  border: 2px solid #292924;
  width: 100%;
}

.c2:hover {
  background-color: #dad2c4;
}

.c10 {
  display: flex;
  flex-direction: column;
  cursor: pointer;
  opacity: 1;
  border-radius: 12px;
  background-color: #f1e9dc;
  padding: 12px;
  width: 100%;
}

.c10:hover {
  background-color: #dad2c4;
}

.c8 {
  line-height: 16px;
  font-size: 16px;
  font-weight: 500;
  color: #292924;
  margin-top: 4px;
}

.c1 {
  display: flex;
  gap: 12px;
  justify-content: flex-start;
  flex-direction: column;
}

@media (min-width: 0px) {
  .c3 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c6 {
    margin-right: 8px;
  }
}

<div>
  <fieldset
    class="c0"
  >
    <div
      class=""
    >
      <div
        class="c1"
      >
        <label
          class="c2"
          data-testid="option1"
          for="MM_SMORES_5"
        >
          <div
            class="c3"
          >
            <input
              checked=""
              class="c4 c5"
              id="MM_SMORES_5"
              name="MM_SMORES_4"
              type="radio"
              value="option1"
            />
            <div
              class="c6 c7"
            />
            <div
              class=""
            >
              <span
                class="c8"
              >
                Option 1
              </span>
              <div
                class=""
              >
                <p
                  class="c9"
                  cursor="inherit"
                  title=""
                >
                  This is the body copy for option 1.
                </p>
              </div>
            </div>
          </div>
        </label>
        <label
          class="c10"
          data-testid="option2"
          for="MM_SMORES_6"
        >
          <div
            class="c3"
          >
            <input
              class="c4 c5"
              id="MM_SMORES_6"
              name="MM_SMORES_4"
              type="radio"
              value="option2"
            />
            <div
              class="c6 c11"
            />
            <div
              class=""
            >
              <span
                class="c8"
              >
                Option 2
              </span>
              <div
                class=""
              >
                <p
                  class="c9"
                  cursor="inherit"
                  title=""
                >
                  This is the body copy for option 2.
                </p>
              </div>
            </div>
          </div>
        </label>
        <label
          class="c10"
          data-testid="option3"
          for="MM_SMORES_7"
        >
          <div
            class="c3"
          >
            <input
              class="c4 c5"
              id="MM_SMORES_7"
              name="MM_SMORES_4"
              type="radio"
              value="option3"
            />
            <div
              class="c6 c11"
            />
            <div
              class=""
            >
              <span
                class="c8"
              >
                Option 3
              </span>
              <div
                class=""
              >
                <p
                  class="c9"
                  cursor="inherit"
                  title=""
                >
                  This is the body copy for option 3.
                </p>
              </div>
            </div>
          </div>
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`RadioGroup > renders correctly with default props 1`] = `
.c3 {
  display: flex;
}

.c0 {
  display: flex;
  flex-direction: column;
  position: relative;
  width: 100%;
  border: 0;
}

.c5 {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c7 {
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  border-radius: 24px;
  background-color: #ffffff;
  border: 2px solid #292924;
  border: 8px solid #292924;
  outline: 0;
}

.c4:focus-visible+.c7 {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c9 {
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  border-radius: 24px;
  background-color: #ffffff;
  border: 2px solid #292924;
  outline: 0;
}

.c9:hover {
  border: 2px solid #292924;
}

.c4:focus-visible+.c9 {
  outline: 2px solid #292924;
  outline-offset: 2px;
}

.c2 {
  display: flex;
  flex-direction: column;
  cursor: pointer;
  opacity: 1;
  width: 100%;
}

.c8 {
  line-height: 16px;
  font-size: 16px;
  font-weight: 500;
  color: #292924;
  margin-top: 4px;
}

.c1 {
  display: flex;
  gap: 12px;
  justify-content: flex-start;
  flex-direction: column;
}

@media (min-width: 0px) {
  .c3 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c6 {
    margin-right: 8px;
  }
}

<div>
  <fieldset
    class="c0"
  >
    <div
      class=""
    >
      <div
        class="c1"
      >
        <label
          class="c2"
          data-testid="option1"
          for="MM_SMORES_1"
        >
          <div
            class="c3"
          >
            <input
              checked=""
              class="c4 c5"
              id="MM_SMORES_1"
              name="MM_SMORES_0"
              type="radio"
              value="option1"
            />
            <div
              class="c6 c7"
            />
            <div
              class=""
            >
              <span
                class="c8"
              >
                Option 1
              </span>
            </div>
          </div>
        </label>
        <label
          class="c2"
          data-testid="option2"
          for="MM_SMORES_2"
        >
          <div
            class="c3"
          >
            <input
              class="c4 c5"
              id="MM_SMORES_2"
              name="MM_SMORES_0"
              type="radio"
              value="option2"
            />
            <div
              class="c6 c9"
            />
            <div
              class=""
            >
              <span
                class="c8"
              >
                Option 2
              </span>
            </div>
          </div>
        </label>
        <label
          class="c2"
          data-testid="option3"
          for="MM_SMORES_3"
        >
          <div
            class="c3"
          >
            <input
              class="c4 c5"
              id="MM_SMORES_3"
              name="MM_SMORES_0"
              type="radio"
              value="option3"
            />
            <div
              class="c6 c9"
            />
            <div
              class=""
            >
              <span
                class="c8"
              >
                Option 3
              </span>
            </div>
          </div>
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;
